  and then, if no issues are reported, you can run the real Plone migration
  [tiberich #5346]
* Upgrade Step: install collective.z3cform.datetimewidget from Add/Remove
  products
* Upgrade Step: install plone.app.collection from Add/Remove products;
  Go to /www/portal_types/Topic/manage_propertiesForm and change the title
  to "Collection - old"
  [tiberich #5397]

5.1 - (2012-07-13)
------------------
* Bug fix: cleanup warnings for jenkings [tiberich]
* Feature: added basic external method migrateRelations to be used 
  for migration of relations from one ob to another simply via python scripts.
  [demarant refs #3213]
* Bug fix: added external methods to fix the problematic unfinished
  folders from EEAFigures
  [tiberich refs #5312]
* Feature: added a manager-only @@gopdb view to enable dropping to pdb console
  [tiberich]
* Upgrade step: delete folders in eeafigures:
    - Create an external method with module name
       - Products.EEAPloneAdmin.find_empty_figure_folders
       - function name: fix_2
    - Execute it, save the output for future reference.
      [tiberich refs #5312]
* Upgrade step: in portal_types, remove Folder as allowed addable content for
  EEAFigure 
  [tiberich refs #5312]

5.0 - (2012-06-20)
------------------
* Feature: Improved unmarkcreationflag method.
  [demarant refs #5312]
* Bug fix: removed definition of is_empty
  [tiberich refs #5289]

4.25 - (2012-06-18)
-------------------
* Bug fix: patched ATContentTypes calendarsuport to accept location field
  as a tuple
  [ichimdav fixes #5284]

4.24 - (2012-06-14)
-------------------
* Bug fix: fixed bug introduced in previous egg
  [ichimdav #5229]

4.23 - (2012-06-14)
-------------------
* Bug fix: show results with tinymce when using translations
  [ichimdav #5229]

4.22 - (2012-06-12)
-------------------
* Bug fix: added script to migrate provider_url on ExternalDataSpecs
  [tiberich fixes #5232]
* Upgrade step:
  Create an external method with module name: 