@@ -5,7 +5,8 @@ from DateTime import DateTime
 
 def handle_resourceregistry_change(obj, event):
     """ Handle resource registry modification"""
-    save_resources_on_disk(obj)
+    if getattr(event, 'force', False):
+        save_resources_on_disk(obj)
 
 def handle_object_copied(obj, event):
     """ Handle object copy/paste"""
